<resources>
    <string name="app_name">Test</string>
    <string name="btnPre">&lt;</string>
    <string name="btnNext">&gt;</string>
    <string name="btnFinish">Finish</string>
    <string name="scrQ1">Question 1</string>
    <string name="scrQ2">Question 2</string>
    <string name="scrQ3">Question 3</string>
    <string name="scrQ4">Question 4</string>
    <string name="scrQ5">Question 5</string>
    <string name="txtOn">True</string>
    <string name="txtOff">False</string>
    <string name="seA">Selection A</string>
    <string name="seB">Selection B</string>
    <string name="seC">Selection C</string>
    <string name="seD">Selection D</string>
    <string name="chA">Choice A</string>
    <string name="chB">Choice B</string>
    <string name="chC">Choice C</string>
    <string name="chD">Choice D</string>
    <string-array name="spinner_default">
        <item>Gia tri 1</item>
        <item>Gia tri 2</item>
        <item>Gia tri 3</item>
        <item>Gia tri 4</item>
    </string-array>
</resources>